src/tools/moc/collectjson.cpp
@@ -51,7 +51,7 @@ static bool readFromDevice(QIODevice *device, QJsonArray *allMetaObjects)
     return true;
 }
 
-int collectJson(const QStringList &jsonFiles, const QString &outputFile)
+int collectJson(const QStringList &jsonFiles, const QString &outputFile, bool skipStdIn)
 {
     QHashSeed::setDeterministicGlobalSeed();
 
@@ -70,7 +70,7 @@ int collectJson(const QStringList &jsonFiles, const QString &outputFile)
     }
 
     QJsonArray allMetaObjects;
-    if (jsonFiles.isEmpty()) {
+    if (jsonFiles.isEmpty() && !skipStdIn) {
         QFile f;
         if (!f.open(stdin, QIODevice::ReadOnly)) {
             fprintf(stderr, "Error opening stdin for reading\n");
